# jibu-fork

./: .env.test.example  .gitignore  CHAT_INITIAL_TESTING_GUIDE.md  CHAT_MANUAL_TEST_GUIDE.md  CHAT_SYSTEM_IMPLEMENTATION.md  CHAT_SYSTEM_QUICK_START.md  CHAT_SYSTEM_TEST_RESULTS.md  CHAT_TESTING_QUICK_REF.md  DEPRECATED.md  FOLDER_MANAGEMENT_WORKLOG.md  FRONTEND_API_UTILS_GUIDE.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION_GUIDE.md  ModelConfig_backup.tsx  ModelConfig_fixed.tsx  PAYLOAD_STRUCTURE_TESTING_GUIDE.md  PHASE_2_COMPLETION_SUMMARY.md  PHASE_3_PAYLOAD_STRUCTURE_COMPLETE.md  PHASE_4_CHAT_SYSTEM_COMPLETE.md  PHASE_4_TESTING_COMPLETE.md  QUEUE_INFRASTRUCTURE_EXPLANATION.md  QUICK_REFERENCE.md  QUICK_START_PAYLOAD_TESTS.md  QUICK_START_WEBHOOK_TEST.md  README.md  TESTING_GUIDE.md  TESTING_IMPLEMENTATION_SUMMARY.md  TEST_COMMANDS.md  TEST_EXECUTION_SUMMARY.md  TEST_FIXES_APPLIED.md  TEST_PAYLOAD_EXAMPLES.md  TEST_SETUP_COMPLETE.md  UNIT_TESTS_SUMMARY.md  WEBHOOK_INTEGRATION_TEST_GUIDE.md  WEBHOOK_QUEUE_IMPLEMENTATION.md  WEBHOOK_TEST_RESULTS.md  WEBHOOK_URL_FOUNDATION_IMPLEMENTATION.md  WORKFLOW_PUBLISH_DIAGNOSTICS.md  achieved.md  cleanup-tools-api.ps1  (+27 more)
action plan/: 01-schema-revision-agent-centric-workflow-versioning.md  02-unified-json-and-versioning-rules.md  03-implementation-migration-testing.md  plan.md  (+13 more)
apps/livekit-agent/: .env.example  1.3.6  README.md  project.json  pyproject.toml  requirements.txt
apps/livekit-agent/src/: config.py  main.py
apps/livekit-agent/src/agent/: backend_client.py  chat_manager.py  factory.py  factory_temp.py  idle_monitor.py
(+1015 files in other folders)
