[tool.poetry]
name = "livekit-agent"
package-mode = false
version = "0.1.0"
description = "Jibu AI LiveKit Worker"
authors = ["Jibu Console"]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
livekit-agents = "*"
livekit-plugins-openai = "*"
livekit-plugins-silero = "*"
python-dotenv = "*"
livekit-plugins-elevenlabs = "^1.3.6"
livekit-plugins-google = "^1.3.6"
livekit-plugins-azure = "^1.3.6"
numpy = "^2.3.5"
livekit-plugins-deepgram = "^1.3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
